solved interactive problem on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ main {
 }
 .title {
   font-size: 7rem;
-  text-shadow: 4px 4px 8px #37474f;
+  text-shadow: 5px 5px 10px #37474f;
 }
 .work-title {
   text-shadow: 4px 4px 8px #37474f;
